maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:53: error: not enough arguments for method marquerCasesAdjacentes: (x: Int, y: Int)Unit.
Unspecified value parameter y.
    if (booldessus) {marquerCasesAdjacentes((x,y-1))}
                                           ^JediEscaper:54: error: not enough arguments for method marquerCasesAdjacentes: (x: Int, y: Int)Unit.
Unspecified value parameter y.
    if (booldroite) {marquerCasesAdjacentes((x+1,y))}
                                           ^JediEscaper:55: error: not enough arguments for method marquerCasesAdjacentes: (x: Int, y: Int)Unit.
Unspecified value parameter y.
    if (booldessous) {marquerCasesAdjacentes((x,y+1))}
                                            ^JediEscaper:56: error: not enough arguments for method marquerCasesAdjacentes: (x: Int, y: Int)Unit.
Unspecified value parameter y.
    if (boolgauche) {marquerCasesAdjacentes((x-1,y))}
                                           ^JediEscaper:91: error: not enough arguments for method marquerCasesAdjacentes: (x: Int, y: Int)Unit.
Unspecified value parameter y.
  marquerCasesAdjacentes(pos)
                        ^